ackage com.neuralhealer.backend.feature.engagement.entity.Engagement;

import com.neuralhealer.backend.feature.engagement.enums.EngagementStatus;
import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.DynamicUpdate;
import org.hibernate.annotations.JdbcTypeCode;
import org.hibernate.type.SqlTypes;
import org.springframework.data.annotation.CreatedDate;
import org.springframework.data.annotation.LastModifiedDate;
import org.springframework.data.jpa.domain.support.AuditingEntityListener;

import java.time.LocalDateTime;
import java.util.UUID;

/**
 * Represents a professional engagement between a doctor and a patient.
 * Maps to: engagements table
 * 
 * Tracks the lifecycle: PENDING -> ACTIVE -> ENDED (or CANCELLED/ARCHIVED)
 */
@Entity
@Table(name = "engagements")
@EntityListeners(AuditingEntityListener.class)
@Getter
@Setter
@Builder
@NoArgsConstructor
@AllArgsConstructor
@DynamicUpdate
public class Engagement {

    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    private UUID id;

    // Human-readable ID (e.g., ENG-2024-001) generated by DB trigger/sequence
    @Column(name = "engagement_id", insertable = false, updatable = false)
    private String engagementId;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "doctor_id", nullable = false)
    private DoctorProfile doctor;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "patient_id", nullable = false)
    private PatientProfile patient;

    @Enumerated(EnumType.STRING)
    @JdbcTypeCode(SqlTypes.NAMED_ENUM)
    @Column(columnDefinition = "engagement_status")
    private EngagementStatus status;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "access_rule_name", referencedColumnName = "rule_name")
    private EngagementAccessRule accessRule;

    // Track who initiated the engagement: "doctor" or "patient"
    @Column(name = "initiated_by", nullable = false, length = 10)
    @Builder.Default
    private String initiatedBy = "doctor";

    @Column(name = "engagement_type", length = 50)
    private String engagementType;

    @Column(name = "start_at")
    private LocalDateTime startAt;

    @Column(name = "end_at")
    private LocalDateTime endAt;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "ended_by")
    private User endedBy;

    @Column(name = "termination_reason", columnDefinition = "TEXT")
    private String terminationReason;

    @Column(name = "start_verified_at")
    private LocalDateTime startVerifiedAt;

    @Column(name = "end_verified_at")
    private LocalDateTime endVerifiedAt;

    @Column(columnDefinition = "TEXT")
    private String notes;

    @CreatedDate
    @Column(name = "created_at", updatable = false)
    private LocalDateTime createdAt;

    @LastModifiedDate
    @Column(name = "updated_at")
    private LocalDateTime updatedAt;

    // --- Lifecycle Helpers ---

    /**
     * Activates the engagement when the counter-party verifies the token.
     */
    public void activate() {
        this.status = EngagementStatus.active;
        this.startAt = LocalDateTime.now();
        this.startVerifiedAt = LocalDateTime.now();
    }

    /**
     * Ends the engagement with a reason and record of who ended it.
     */
    public void end(User user, String reason) {
        this.status = EngagementStatus.ended;
        this.endAt = LocalDateTime.now();
        this.endVerifiedAt = LocalDateTime.now();
        this.endedBy = user;
        this.terminationReason = reason;
    }
}
